// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Styling and specificity Themed on desktop all builds should match 1`] = `
Object {
  "altButton": Map {
    "box-shadow" => "rgb(255, 0, 0) 0px 0px 5px 0px",
    "animation" => "3s infinite alternate styles_slide__1hc26g71 ease-in-out",
    "font-family" => "styles_impact__1hc26g70",
    "background-color" => "rgb(0, 128, 0)",
    "color" => "rgb(255, 255, 255)",
    "animation-duration" => "3s",
    "animation-timing-function" => "ease-in-out",
    "animation-delay" => "0s",
    "animation-iteration-count" => "infinite",
    "animation-direction" => "alternate",
    "animation-fill-mode" => "none",
    "animation-play-state" => "running",
    "animation-name" => "styles_slide__1hc26g71",
    "border-radius" => "9999px",
    "border-top-left-radius" => "9999px",
    "border-top-right-radius" => "9999px",
    "border-bottom-right-radius" => "9999px",
    "border-bottom-left-radius" => "9999px",
  },
  "altContainer": Map {
    "animation" => "3s infinite alternate globalSlide ease-in-out",
    "display" => "flex",
    "flex-direction" => "column",
    "gap" => "var(--space-2__1acqwpj4)",
    "padding" => "var(--space-3__1acqwpj5)",
    "animation-duration" => "3s",
    "animation-timing-function" => "ease-in-out",
    "animation-delay" => "0s",
    "animation-iteration-count" => "infinite",
    "animation-direction" => "alternate",
    "animation-fill-mode" => "none",
    "animation-play-state" => "running",
    "animation-name" => "globalSlide",
    "border" => "1px solid var(--colors-background-color__1acqwpj1)",
  },
  "inlineThemeButton": Map {
    "box-shadow" => "rgb(255, 0, 0) 0px 0px 5px 0px",
    "animation" => "3s infinite alternate styles_slide__1hc26g71 ease-in-out",
    "font-family" => "MyGlobalComicSans",
    "background-color" => "rgb(255, 165, 0)",
    "color" => "rgb(0, 0, 0)",
    "animation-duration" => "3s",
    "animation-timing-function" => "ease-in-out",
    "animation-delay" => "0s",
    "animation-iteration-count" => "infinite",
    "animation-direction" => "alternate",
    "animation-fill-mode" => "none",
    "animation-play-state" => "running",
    "animation-name" => "styles_slide__1hc26g71",
    "opacity" => "0.5",
    "border-radius" => "9999px",
    "border-top-left-radius" => "9999px",
    "border-top-right-radius" => "9999px",
    "border-bottom-right-radius" => "9999px",
    "border-bottom-left-radius" => "9999px",
    "outline" => "5px solid red",
    "outline-color" => "rgb(255, 0, 0)",
    "outline-style" => "solid",
    "outline-width" => "5px",
  },
  "inlineThemeContainer": Map {
    "animation" => "3s infinite alternate globalSlide ease-in-out",
    "display" => "flex",
    "flex-direction" => "column",
    "gap" => "var(--space-2__1acqwpj4)",
    "padding" => "var(--space-3__1acqwpj5)",
    "animation-duration" => "3s",
    "animation-timing-function" => "ease-in-out",
    "animation-delay" => "0s",
    "animation-iteration-count" => "infinite",
    "animation-direction" => "alternate",
    "animation-fill-mode" => "none",
    "animation-play-state" => "running",
    "animation-name" => "globalSlide",
    "border" => "1px solid var(--colors-background-color__1acqwpj1)",
  },
  "nestedRootButton": Map {
    "box-shadow" => "rgb(255, 0, 0) 0px 0px 5px 0px",
    "animation" => "3s infinite alternate styles_slide__1hc26g71 ease-in-out",
    "font-family" => "MyGlobalComicSans",
    "background-color" => "rgb(0, 0, 255)",
    "color" => "rgb(255, 255, 255)",
    "animation-duration" => "3s",
    "animation-timing-function" => "ease-in-out",
    "animation-delay" => "0s",
    "animation-iteration-count" => "infinite",
    "animation-direction" => "alternate",
    "animation-fill-mode" => "none",
    "animation-play-state" => "running",
    "animation-name" => "styles_slide__1hc26g71",
    "border-radius" => "9999px",
    "border-top-left-radius" => "9999px",
    "border-top-right-radius" => "9999px",
    "border-bottom-right-radius" => "9999px",
    "border-bottom-left-radius" => "9999px",
    "outline" => "5px solid red",
    "outline-color" => "rgb(255, 0, 0)",
    "outline-style" => "solid",
    "outline-width" => "5px",
  },
  "nestedRootContainer": Map {
    "animation" => "3s infinite alternate globalSlide ease-in-out",
    "display" => "flex",
    "flex-direction" => "column",
    "gap" => "var(--space-2__1acqwpj4)",
    "padding" => "var(--space-3__1acqwpj5)",
    "animation-duration" => "3s",
    "animation-timing-function" => "ease-in-out",
    "animation-delay" => "0s",
    "animation-iteration-count" => "infinite",
    "animation-direction" => "alternate",
    "animation-fill-mode" => "none",
    "animation-play-state" => "running",
    "animation-name" => "globalSlide",
    "border" => "1px solid var(--colors-background-color__1acqwpj1)",
  },
  "responsiveThemeButton": Map {
    "box-shadow" => "rgb(255, 0, 0) 0px 0px 5px 0px",
    "animation" => "3s infinite alternate styles_slide__1hc26g71 ease-in-out",
    "font-family" => "MyGlobalComicSans",
    "background-color" => "rgb(128, 0, 128)",
    "color" => "rgb(255, 192, 203)",
    "animation-duration" => "3s",
    "animation-timing-function" => "ease-in-out",
    "animation-delay" => "0s",
    "animation-iteration-count" => "infinite",
    "animation-direction" => "alternate",
    "animation-fill-mode" => "none",
    "animation-play-state" => "running",
    "animation-name" => "styles_slide__1hc26g71",
    "border-radius" => "9999px",
    "border-top-left-radius" => "9999px",
    "border-top-right-radius" => "9999px",
    "border-bottom-right-radius" => "9999px",
    "border-bottom-left-radius" => "9999px",
    "outline" => "5px solid red",
    "outline-color" => "rgb(255, 0, 0)",
    "outline-style" => "solid",
    "outline-width" => "5px",
  },
  "responsiveThemeContainer": Map {
    "animation" => "3s infinite alternate globalSlide ease-in-out",
    "display" => "flex",
    "flex-direction" => "column",
    "gap" => "var(--space-2__1acqwpj4)",
    "padding" => "var(--space-3__1acqwpj5)",
    "animation-duration" => "3s",
    "animation-timing-function" => "ease-in-out",
    "animation-delay" => "0s",
    "animation-iteration-count" => "infinite",
    "animation-direction" => "alternate",
    "animation-fill-mode" => "none",
    "animation-play-state" => "running",
    "animation-name" => "globalSlide",
    "border" => "1px solid var(--colors-background-color__1acqwpj1)",
  },
  "root": Map {
    "box-shadow" => "rgb(255, 0, 0) 0px 0px 5px 0px",
  },
  "rootButton": Map {
    "box-shadow" => "rgb(255, 0, 0) 0px 0px 5px 0px",
    "animation" => "3s infinite alternate styles_slide__1hc26g71 ease-in-out",
    "font-family" => "styles_impact__1hc26g70",
    "background-color" => "rgb(0, 0, 255)",
    "color" => "rgb(255, 255, 255)",
    "animation-duration" => "3s",
    "animation-timing-function" => "ease-in-out",
    "animation-delay" => "0s",
    "animation-iteration-count" => "infinite",
    "animation-direction" => "alternate",
    "animation-fill-mode" => "none",
    "animation-play-state" => "running",
    "animation-name" => "styles_slide__1hc26g71",
    "border-radius" => "9999px",
    "border-top-left-radius" => "9999px",
    "border-top-right-radius" => "9999px",
    "border-bottom-right-radius" => "9999px",
    "border-bottom-left-radius" => "9999px",
  },
  "rootContainer": Map {
    "animation" => "3s infinite alternate globalSlide ease-in-out",
    "display" => "flex",
    "flex-direction" => "column",
    "gap" => "var(--space-2__1acqwpj4)",
    "padding" => "var(--space-3__1acqwpj5)",
    "animation-duration" => "3s",
    "animation-timing-function" => "ease-in-out",
    "animation-delay" => "0s",
    "animation-iteration-count" => "infinite",
    "animation-direction" => "alternate",
    "animation-fill-mode" => "none",
    "animation-play-state" => "running",
    "animation-name" => "globalSlide",
    "border" => "1px solid var(--colors-background-color__1acqwpj1)",
  },
}
`;

exports[`Styling and specificity Themed on mobile all builds should match 1`] = `
Object {
  "altButton": Map {
    "box-shadow" => "rgb(255, 0, 0) 0px 0px 5px 0px",
    "animation" => "3s infinite alternate styles_slide__1hc26g71 ease-in-out",
    "font-family" => "styles_impact__1hc26g70",
    "background-color" => "rgb(0, 128, 0)",
    "color" => "rgb(255, 255, 255)",
    "animation-duration" => "3s",
    "animation-timing-function" => "ease-in-out",
    "animation-delay" => "0s",
    "animation-iteration-count" => "infinite",
    "animation-direction" => "alternate",
    "animation-fill-mode" => "none",
    "animation-play-state" => "running",
    "animation-name" => "styles_slide__1hc26g71",
  },
  "altContainer": Map {
    "animation" => "3s infinite alternate globalSlide ease-in-out",
    "display" => "flex",
    "flex-direction" => "column",
    "gap" => "var(--space-2__1acqwpj4)",
    "padding" => "var(--space-3__1acqwpj5)",
    "animation-duration" => "3s",
    "animation-timing-function" => "ease-in-out",
    "animation-delay" => "0s",
    "animation-iteration-count" => "infinite",
    "animation-direction" => "alternate",
    "animation-fill-mode" => "none",
    "animation-play-state" => "running",
    "animation-name" => "globalSlide",
  },
  "inlineThemeButton": Map {
    "box-shadow" => "rgb(255, 0, 0) 0px 0px 5px 0px",
    "animation" => "3s infinite alternate styles_slide__1hc26g71 ease-in-out",
    "font-family" => "MyGlobalComicSans",
    "background-color" => "rgb(255, 165, 0)",
    "color" => "rgb(0, 0, 0)",
    "animation-duration" => "3s",
    "animation-timing-function" => "ease-in-out",
    "animation-delay" => "0s",
    "animation-iteration-count" => "infinite",
    "animation-direction" => "alternate",
    "animation-fill-mode" => "none",
    "animation-play-state" => "running",
    "animation-name" => "styles_slide__1hc26g71",
    "opacity" => "0.5",
    "outline" => "5px solid red",
    "outline-color" => "rgb(255, 0, 0)",
    "outline-style" => "solid",
    "outline-width" => "5px",
  },
  "inlineThemeContainer": Map {
    "animation" => "3s infinite alternate globalSlide ease-in-out",
    "display" => "flex",
    "flex-direction" => "column",
    "gap" => "var(--space-2__1acqwpj4)",
    "padding" => "var(--space-3__1acqwpj5)",
    "animation-duration" => "3s",
    "animation-timing-function" => "ease-in-out",
    "animation-delay" => "0s",
    "animation-iteration-count" => "infinite",
    "animation-direction" => "alternate",
    "animation-fill-mode" => "none",
    "animation-play-state" => "running",
    "animation-name" => "globalSlide",
  },
  "nestedRootButton": Map {
    "box-shadow" => "rgb(255, 0, 0) 0px 0px 5px 0px",
    "animation" => "3s infinite alternate styles_slide__1hc26g71 ease-in-out",
    "font-family" => "MyGlobalComicSans",
    "background-color" => "rgb(0, 0, 255)",
    "color" => "rgb(255, 255, 255)",
    "animation-duration" => "3s",
    "animation-timing-function" => "ease-in-out",
    "animation-delay" => "0s",
    "animation-iteration-count" => "infinite",
    "animation-direction" => "alternate",
    "animation-fill-mode" => "none",
    "animation-play-state" => "running",
    "animation-name" => "styles_slide__1hc26g71",
    "outline" => "5px solid red",
    "outline-color" => "rgb(255, 0, 0)",
    "outline-style" => "solid",
    "outline-width" => "5px",
  },
  "nestedRootContainer": Map {
    "animation" => "3s infinite alternate globalSlide ease-in-out",
    "display" => "flex",
    "flex-direction" => "column",
    "gap" => "var(--space-2__1acqwpj4)",
    "padding" => "var(--space-3__1acqwpj5)",
    "animation-duration" => "3s",
    "animation-timing-function" => "ease-in-out",
    "animation-delay" => "0s",
    "animation-iteration-count" => "infinite",
    "animation-direction" => "alternate",
    "animation-fill-mode" => "none",
    "animation-play-state" => "running",
    "animation-name" => "globalSlide",
  },
  "responsiveThemeButton": Map {
    "box-shadow" => "rgb(255, 0, 0) 0px 0px 5px 0px",
    "animation" => "3s infinite alternate styles_slide__1hc26g71 ease-in-out",
    "font-family" => "MyGlobalComicSans",
    "background-color" => "rgb(255, 192, 203)",
    "color" => "rgb(128, 0, 128)",
    "animation-duration" => "3s",
    "animation-timing-function" => "ease-in-out",
    "animation-delay" => "0s",
    "animation-iteration-count" => "infinite",
    "animation-direction" => "alternate",
    "animation-fill-mode" => "none",
    "animation-play-state" => "running",
    "animation-name" => "styles_slide__1hc26g71",
    "outline" => "5px solid red",
    "outline-color" => "rgb(255, 0, 0)",
    "outline-style" => "solid",
    "outline-width" => "5px",
  },
  "responsiveThemeContainer": Map {
    "animation" => "3s infinite alternate globalSlide ease-in-out",
    "display" => "flex",
    "flex-direction" => "column",
    "gap" => "var(--space-2__1acqwpj4)",
    "padding" => "var(--space-3__1acqwpj5)",
    "animation-duration" => "3s",
    "animation-timing-function" => "ease-in-out",
    "animation-delay" => "0s",
    "animation-iteration-count" => "infinite",
    "animation-direction" => "alternate",
    "animation-fill-mode" => "none",
    "animation-play-state" => "running",
    "animation-name" => "globalSlide",
  },
  "root": Map {
    "box-shadow" => "rgb(255, 0, 0) 0px 0px 5px 0px",
  },
  "rootButton": Map {
    "box-shadow" => "rgb(255, 0, 0) 0px 0px 5px 0px",
    "animation" => "3s infinite alternate styles_slide__1hc26g71 ease-in-out",
    "font-family" => "styles_impact__1hc26g70",
    "background-color" => "rgb(0, 0, 255)",
    "color" => "rgb(255, 255, 255)",
    "animation-duration" => "3s",
    "animation-timing-function" => "ease-in-out",
    "animation-delay" => "0s",
    "animation-iteration-count" => "infinite",
    "animation-direction" => "alternate",
    "animation-fill-mode" => "none",
    "animation-play-state" => "running",
    "animation-name" => "styles_slide__1hc26g71",
  },
  "rootContainer": Map {
    "animation" => "3s infinite alternate globalSlide ease-in-out",
    "display" => "flex",
    "flex-direction" => "column",
    "gap" => "var(--space-2__1acqwpj4)",
    "padding" => "var(--space-3__1acqwpj5)",
    "animation-duration" => "3s",
    "animation-timing-function" => "ease-in-out",
    "animation-delay" => "0s",
    "animation-iteration-count" => "infinite",
    "animation-direction" => "alternate",
    "animation-fill-mode" => "none",
    "animation-play-state" => "running",
    "animation-name" => "globalSlide",
  },
}
`;
